--- a/cmd/api/.env
+++ b/cmd/api/.env
@@ -1,6 +1,7 @@
-export MONGO_ENDPOINT=mongodb://admin:pass@localhost:27017/admin?authSource=admin
-export MONGO_DB=test
-export MONGO_DB_SIZE=1000000
-export MONGO_TIMEOUT=10
-export BIND_ADDRESS=":8080"
-export LOG_OUTPUT="stdout"
+MONGO_ENDPOINT=mongodb://localhost:27017
+MONGO_DB=test
+MONGO_LOG_DB_SIZE=1000000
+MONGO_EMAIL_DB_SIZE=1000000
+MONGO_TIMEOUT=10
+BIND_ADDRESS=":8080"
+LOG_OUTPUT="stdout"
