--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-MONGO_ENDPOINT="mongodb://localhost:27017"
-MONGO_DB="test"
+MONGO_ENDPOINT=mongodb://localhost:27017
+MONGO_DB=test
 MONGO_LOG_DB_SIZE=1000000
 MONGO_EMAIL_DB_SIZE=1000000
 MONGO_TIMEOUT=10
-BIND_ADDRESS=":8080"
+BIND_ADDRESS=:8080
 SMTP_ALLOW=10
 SMTP_INTERVAL_MINUTE=1
-SMTP_SERVER="localhost"
-SMTP_USERNAME="username@localhost"
-SMTP_PASSWORD="password"
-SMTP_FROM="username@localhost"
-SMTP_FROMNAME="fromname"
-SMTP_REPLYTO="noreply@localhost"
+SMTP_SERVER=localhost
+SMTP_USERNAME=username@localhost
+SMTP_PASSWORD=password
+SMTP_FROM=username@localhost
+SMTP_FROMNAME=fromname
+SMTP_REPLYTO=noreply@localhost
 SMTP_ATTEMPTS=3
-LOG_OUTPUT="stdout"
+LOG_OUTPUT=stdout
