refactor docker-compose

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_ENDPOINT=mongodb://localhost:27017
+MONGO_ENDPOINT=mongodb://admin:pass@mongodb:27017
 MONGO_DB=test
 MONGO_LOG_DB_SIZE=1000000
 MONGO_EMAIL_DB_SIZE=1000000
